examples/should-fail/f10_bad_k_result.lean
def demo2_bad_k_result :
  (A : Type) -> (B : Type) -> A -> B -> A :=
  fun (A : Type) (B : Type) (a : A) (b : B) => b
